<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_sms_times" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_phone_num" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_sms_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/test_number"
            android:numeric="integer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_wait_sms" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_sms_waite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip" 
            android:hint="@string/hint_default_5"
            android:numeric="integer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_sms_content" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_sms_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip" 
            android:hint="@string/hint_default_101"
            android:numeric="integer" />        
        
        
        
        
        
        
        
        <Button
            android:id="@+id/btn_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_start" 
            android:textSize="25dip"/>

        <Button
            android:id="@+id/btn_sms_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/sms_stop_send" 
            android:textSize="25dip"/>

        <Button
            android:id="@+id/btn_sms_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_return" 
            android:textSize="25dip"/>

        <TextView
            android:id="@+id/text_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip" 
            android:textColor="@color/color_black"
            android:layout_marginBottom="20dip"/>
    </LinearLayout>

</ScrollView>