<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_times" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_syssleep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/sys_sleep_text1" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_syssleep_waite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_5"
            android:numeric="integer" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/sys_sleep_text2" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/edit_syssleep_on"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_20"
            android:numeric="integer" />

        <Button
            android:id="@+id/btn_syssleep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_start" 
            android:textSize="25dip"/>

        <Button
            android:id="@+id/btn_syssleep_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_stop" 
            android:textSize="25dip"/>

        <Button
            android:id="@+id/btn_syssleep_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_return" 
            android:textSize="25dip"/>

        <TextView
            android:id="@+id/test_syssleep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="10dip" 
            android:textColor="@color/color_black"/>
    </LinearLayout>

</ScrollView>