<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_receivecall_times"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="@color/color_red" 
        android:layout_marginLeft="20dip"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/text_receive_number"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/edit_receivecall_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/text_accept_wait_time"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/edit_receivecall_waittime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:hint="@string/hint_default_5" />

    <Button
        android:id="@+id/btn_receivecall_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/test_receivecall_start"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_receivecall_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/test_receivecall_stop"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_receivecall_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="20dip"
        android:text="@string/test_receivecall_return"
        android:textSize="25dip" />

</LinearLayout>