<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:text="@string/text_select_calltest"
        android:textColor="@color/color_black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_calltest_docall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/btntext_docall"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_calltest_answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/btntext_doanswer"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_calltest_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="20dip"
        android:text="@string/test_return"
        android:textSize="25dip" />

</LinearLayout>