<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_rebootlefttimes"
            android:textColor="@color/color_red"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
             android:layout_marginTop="20dip"
            android:text="@string/test_times"
            android:textColor="@color/color_black"/>
        <EditText
            android:id="@+id/edit_reboot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
             android:layout_marginTop="20dip"
            android:text="@string/reboot_wait_text"
            android:textColor="@color/color_black"/>
        <EditText
            android:id="@+id/edit_reboot_waite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />

        <Button
            android:id="@+id/btn_reboot_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_start" 
            android:textSize="25dip"/>

        <Button
            android:id="@+id/btn_reboot_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_stop" 
            android:textSize="25dip"/>
        <Button
            android:id="@+id/btn_reboot_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_return" 
            android:textSize="25dip"/>        
    </LinearLayout>

</ScrollView>