<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/clear_text_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:text="@string/alarm_text"
        android:textColor="@color/color_black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_showLeftSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear_text_top"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="#FF0000"
        android:textSize="100sp" />

    <Button
        android:id="@+id/btn_celar_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_showLeftSeconds"
        android:layout_marginTop="20dip"
        android:text="@string/test_start"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_clear_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_celar_start"
        android:layout_marginTop="20dip"
        android:text="@string/test_stop"
        android:textSize="25dip" />

    <Button
        android:id="@+id/btn_clear_goback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_clear_stop"
        android:layout_marginTop="20dip"
        android:text="@string/test_return"
        android:textSize="25dip" />

</RelativeLayout>