<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:stretchColumns="0,1"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip">
            <TableRow>
                <TextView 
                    android:id="@+id/text_wifi_leftTimes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_black"
                    android:layout_column="0"/>
                <TextView
                    android:id="@+id/text_show_wifistate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    
                    android:textColor="@color/color_red" 
                    android:layout_column="1"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_times"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/edit_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_wait_statechange"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/edit_wifi_waite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="@string/hint_default_10"
            android:numeric="integer" />

        <Button
            android:id="@+id/btn_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_start"
            android:textSize="25dip" />

        <Button
            android:id="@+id/btn_wifi_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_stop"
            android:textSize="25dip" />

        <Button
            android:id="@+id/btn_wifi_return"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/test_return"
            android:textSize="25dip" />

           <TextView
            android:id="@+id/test_wifi_errorshow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="10dip"
            android:textColor="@color/color_black" />
     
    </LinearLayout>

</ScrollView>